# parsify

./: LICENSE  README.md  setup.cfg
.github/workflows/: publish_to_pypi.yml
parsify/: __init__.py  parsify.py
