[metadata]
name = parsify
version = 3.2
author = Luka Sosiashvili
author_email = luksosiashvili@gmail.com
description = Parsing tool for massive parsing - stop writing many single parsers.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/lukasanukvari/parsify
license = MIT License
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.8
install_requires =
    requests